# algobots

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  REVIEW_GUIDE.md  action.md  docker-compose.yml  pyproject.toml  schema.sql
backtest_specs/: banknifty_constituent_led_long_options_v1.json  long_options_volatility_greeks_gate_v1.json  nifty_expiry_tuesday_defined_risk_v1.json
codesfiles/: s102_algobotstart.py
config/: banknifty_options_paper.json  banknifty_options_paper.json.bak_20260610_080517  banknifty_trend_patterns.json  fundamentals.csv  gate.yaml  knowledge_ingestion.json  live_order_gate.json  nse_holidays.yaml  nse_intraday_options_strategy_pack.json  options_chain.json  paper_algobot.json  settings.yaml  special_situations.csv  strategies.yaml  strategy_qualification.json  strategy_universe_india.json
dashboard/: banknifty_options_dashboard.py  control_plane.py  strategy_cards.py  strategy_platform_dashboard.py
docs/: STRATEGY_AUTHORING.md  india_strategy_platform.md  indian_markets_strategy_compendium_gap_analysis.md  indian_markets_strategy_compendium_mapping.md
migrations/: 001_trading_research_schemas.sql  002_deep_research_runs.sql  003_morning_recommendations.sql  004_paper_algobot.sql  005_algobot_phase2_live_gate.sql  006_symbol_evidence_snapshots.sql  007_paper_portfolio_tracking.sql  008_banknifty_options_paper.sql  009_dashboard_readonly_role.sql  012_nse_intraday_options_strategy_pack.sql  013_options_chain_snapshots.sql  014_knowledge_embeddings.sql  015_control_plane.sql  016_banknifty_trend_patterns.sql  017_banknifty_options_no_entry_decisions.sql
reports/: SUPERSEDED.md  banknifty_options_dashboard_plan.md  banknifty_options_monitor_flow.excalidraw  banknifty_options_paper_snapshot_2026-06-08.md  banknifty_options_paper_snapshot_2026-06-09.md  banknifty_options_paper_snapshot_2026-06-10.md  banknifty_pullback_v2_exit_tuning_20260611.csv  banknifty_pullback_v2_exit_tuning_20260611.json  banknifty_pullback_v2_exit_tuning_corrected_pct_20260611.csv  banknifty_pullback_v2_exit_tuning_corrected_pct_20260611.json  banknifty_pullback_v2_proxy_backtest_20260611_164707.md  banknifty_pullback_v2_proxy_backtest_20260611_171900.md  banknifty_pullback_v2_proxy_backtest_20260612_061305.md  banknifty_pullback_v2_proxy_backtest_20260612_061414.md  banknifty_pullback_v2_proxy_backtest_20260708_142928.md  banknifty_pullback_v2_proxy_backtest_20260708_144514.md  banknifty_pullback_v2_proxy_backtest_20260708_145358.md  banknifty_pullback_v2_proxy_backtest_20260708_173839.md  banknifty_pullback_v2_proxy_sensitivity_20260611.json  banknifty_pullback_v2_proxy_trades_20260611_164707.csv  banknifty_pullback_v2_proxy_trades_20260611_171900.csv  banknifty_pullback_v2_proxy_trades_20260612_061414.csv  banknifty_pullback_v2_proxy_trades_20260708_144514.csv  banknifty_pullback_v2_proxy_trades_20260708_145358.csv  banknifty_pullback_v2_proxy_trades_20260708_173839.csv  bn_iron_condor_backtest_20260708.md  claude_algobots_critical_review_20260708.md  claude_banknifty_multi_agent_review.md  claude_banknifty_multi_agent_review_resume.json  claude_banknifty_multi_agent_review_stream.jsonl  claude_banknifty_review_handoff_prompt.md  claude_full_repo_review_20260611.md  daily_market_report_11am_20260605_123055.md  daily_market_report_11am_20260608_053036.md  daily_market_report_11am_20260609_053007.md  daily_market_report_11am_20260610_053008.md  daily_market_report_11am_20260611_053049.md  daily_market_report_2026-06-02.md  daily_market_report_2026-06-05.md  daily_market_report_2026-06-07.md  (+54 more)
scripts/: apply_control_requests.py  apply_control_requests_tick.sh  backfill_chunk_embeddings.py  banknifty_options_contract_refresh.sh  banknifty_options_eod_report.sh  banknifty_options_optionchain_tick.sh  banknifty_options_paper.py  banknifty_trend_patterns.py  (+54 more)
(+228 files in other folders)
