[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algobot"
version = "1.0.0"
description = "49-strategy NSE algorithmic trading platform: backtest, paper trade, live deploy"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "SQLAlchemy>=2.0",
    "apscheduler>=3.10",
    "pytz>=2024.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "streamlit>=1.33",
    "plotly>=5.20",
    "fyers-apiv3>=3.1",
    "pyotp>=2.9",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
    "psycopg[binary]>=3.1",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["algobot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Sibling-project tests (they import scripts/dashboard code with their own deps
# like psycopg). This platform's suite is the tests/test_* files listed in git
# under this project; ignore the sibling ones so `pytest` runs clean.
addopts = """-q \
--ignore=tests/test_apply_control_requests.py \
--ignore=tests/test_banknifty_options_dashboard.py \
--ignore=tests/test_banknifty_options_paper.py \
--ignore=tests/test_banknifty_pullback_v2_backtest.py \
--ignore=tests/test_daily_market_report.py \
--ignore=tests/test_deep_research_context.py \
--ignore=tests/test_fts_swing_backtest.py \
--ignore=tests/test_fyers_history_validation.py \
--ignore=tests/test_fyers_trading_snapshots.py \
--ignore=tests/test_live_order_gate.py \
--ignore=tests/test_morning_stock_recommendations.py \
--ignore=tests/test_options_chain_ingest.py \
--ignore=tests/test_paper_algobot.py \
--ignore=tests/test_paper_portfolio_report.py \
--ignore=tests/test_structure_fundamental_sentiment_evidence.py \
--ignore=tests/test_technical_factors.py \
--ignore=tests/test_trading_research_schema.py \
--ignore=tests/test_watchlist_daily_report.py \
--ignore=tests/test_nse_intraday_options_strategy_pack.py"""
