[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algobot"
version = "1.0.0"
description = "49-strategy NSE algorithmic trading platform: backtest, paper trade, live deploy"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "SQLAlchemy>=2.0",
    "apscheduler>=3.10",
    "pytz>=2024.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "streamlit>=1.33",
    "plotly>=5.20",
    "fyers-apiv3>=3.1",
    "pyotp>=2.9",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
    "psycopg[binary]>=3.1",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

# uv-native dev group so `uv sync --group dev` works (CLAUDE.md command);
# the optional-dependencies extra above stays for pip users.
[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["algobot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# One unified suite: algobot platform tests AND the legacy finance-db safety
# rails. Tests that need the live finance-db Postgres self-skip via the
# requires_finance_db marker in tests/conftest.py.
addopts = "-q"
